--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,31 @@
   <base href="/2cinfo4">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+    rel="icon"
+    type="image/png"
+    href="favicon-16x16.png">
+  <link
+    rel="icon"
+    type="image/png"
+    href="favicon-32x32.png">
+
+  <!-- Fonts -->
+  <link
+    href="assets/fonts/inter/inter.css"
+    rel="stylesheet">
+
+  <link
+    href="https://fonts.gstatic.com"
+    rel="preconnect">
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap"
+    rel="stylesheet">
+
+  <!-- Icon fonts -->
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
 </head>
 <body>
   <app-root></app-root><!--Appel du composant racine (AppComponent)-->
